# StudyBlender

./: CMakeLists.txt  README.md  formatcode.sh
cmake/: ConfigureINC.cmake  ConfigureMain.cmake  ConfigureSRC.cmake  ConfigureTest.cmake  MyConfigure.cmake
data/: h_files_path.txt  inc_dirs.txt
main/: testing_main.cc
python/: setup.py
src/: Timer.cpp
